--- a/package.json
+++ b/package.json
@@ -3,15 +3,27 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "resetApp": "rm -rf node_modules && rm -rf yarn.lock && cd ios && rm -rf Podfile.lock && pod deintegrate && cd .. && cd android && rm -rf .gradle && rm -rf .idea && rm -rf build && cd app && rm -rf build && cd .. && cd ..&& yarn install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
-    "start": "react-native start",
+    "start": "react-native start --reset-cache",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/drawer": "^6.7.2",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.7",
     "react": "18.3.1",
-    "react-native": "0.75.4"
+    "react-native": "0.75.4",
+    "react-native-gesture-handler": "^2.20.0",
+    "react-native-reanimated": "^3.16.0",
+    "react-native-reanimated-carousel": "^3.5.1",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
