--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-swiper-flatlist": "^3.2.5",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
