--- a/package.json
+++ b/package.json
@@ -15,16 +15,21 @@
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.16.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
     "react-native-swiper-flatlist": "^3.2.5",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
