inputField order login register changes cart

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "resetApp": "rm -rf node_modules && rm -rf yarn.lock && cd ios && rm -rf Podfile.lock && pod deintegrate && cd .. && cd android && rm -rf .gradle && rm -rf .idea && rm -rf build && cd app && rm -rf build && cd .. && cd ..&& yarn install",
+    "resetPod": "cd ios && rm -rf Podfile.lock && pod deintegrate && pod cache clean --all && npm cache verify && yarn cache clean && pod install --repo-update && cd ..",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "lint": "eslint .",
@@ -11,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
@@ -22,10 +24,12 @@
     "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.20.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^3.16.0",
+    "react-native-reanimated": "^3.9.0",
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
+    "react-native-star-rating-widget": "^1.9.1",
+    "react-native-svg": "^15.8.0",
     "react-native-swiper-flatlist": "^3.2.5",
     "react-native-vector-icons": "^10.2.0",
     "react-redux": "^9.1.2",
