--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
   },
   "dependencies": {
     "@react-native-community/checkbox": "^0.5.17",
+    "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/geolocation": "^3.4.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
+    "geolib": "^3.3.4",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-encrypted-storage": "^4.0.3",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.20.0",
+    "react-native-get-location": "^5.0.0",
+    "react-native-image-base64": "^0.1.4",
+    "react-native-image-crop-picker": "^0.41.4",
+    "react-native-maps": "^1.18.2",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "^3.9.0",
     "react-native-reanimated-carousel": "^3.5.1",
