--- a/ios/NeoStore/Info.plist
+++ b/ios/NeoStore/Info.plist
@@ -33,6 +33,19 @@
 	</dict>
 	
 	<key>NSLocationWhenInUseUsageDescription</key>
+<string>Your location is used to show nearby places on the map.</string>
+<key>NSLocationAlwaysUsageDescription</key>
+<string>Your location is used to show nearby places on the map.</string>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+  <string>access library</string>
+   <key>NSPhotoLibraryAddUsageDescription</key>
+  <string>nneed library </string>
+  <key>NSCameraUsageDescription</key>
+  <string>access camera</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>need</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
